name:           base-float
version:        4.6.0.1
license:        BSD3
license-file:   LICENSE
maintainer:     libraries@haskell.org
bug-reports: http://hackage.haskell.org/trac/ghc/newticket?component=libraries/base
synopsis:       Basic libraries
description:
    This package contains the Prelude and its support libraries,
    and a large collection of useful libraries ranging from data
    structures to parsing combinators and debugging utilities.
cabal-version:  >=1.6
build-type: Simple

source-repository head
    type:     git
    location: http://darcs.haskell.org/packages/base.git/

Flag integer-simple
    Description: Use integer-simple

Library {
    if flag(integer-simple)
        build-depends: integer-simple
    else
        build-depends: integer-gmp
        cpp-options: -DOPTIMISE_INTEGER_GCD_LCM

    build-depends: rts, ghc-prim, base-pure, base-array
    exposed-modules:
        GHC.Float
        Data.Complex
    include-dirs: include

}
