name:           base-foreign
version:        4.6.0.1
license:        BSD3
license-file:   LICENSE
maintainer:     libraries@haskell.org
bug-reports: http://hackage.haskell.org/trac/ghc/newticket?component=libraries/base
synopsis:       Basic libraries
description:
    This package contains the Prelude and its support libraries,
    and a large collection of useful libraries ranging from data
    structures to parsing combinators and debugging utilities.
cabal-version:  >=1.6
build-type: Simple
extra-tmp-files:
                config.log config.status autom4te.cache
                include/HsBaseConfig.h include/EventConfig.h
extra-source-files:
                config.guess config.sub install-sh
                aclocal.m4 configure.ac configure
                include/CTypes.h include/md5.h

source-repository head
    type:     git
    location: http://darcs.haskell.org/packages/base.git/

Flag integer-simple
    Description: Use integer-simple

Library {
    build-depends: rts, ghc-prim, base-pure, base-st, base-io, base-float
    exposed-modules:
        Foreign.Concurrent,
        GHC.Foreign,
        GHC.ForeignPtr,
        Foreign,
        Foreign.C,
        Foreign.C.Error,
        Foreign.C.String,
        Foreign.C.Types,
        Foreign.ForeignPtr,
        Foreign.ForeignPtr.Safe,
        Foreign.ForeignPtr.Unsafe,
        Foreign.Marshal,
        Foreign.Marshal.Alloc,
        Foreign.Marshal.Array,
        Foreign.Marshal.Error,
        Foreign.Marshal.Pool,
        Foreign.Marshal.Safe,
        Foreign.Marshal.Utils,
        Foreign.Marshal.Unsafe,
        Foreign.Ptr,
        Foreign.Safe,
        Foreign.StablePtr,
        Foreign.Storable,
        GHC.Storable
        GHC.Stable
        GHC.Ptr
        -- slightly misplaced here, needed for recoverDecode
        GHC.IO.Buffer
        GHC.IO.Encoding
        GHC.IO.Encoding.Types
        GHC.IO.Encoding.UTF8
        GHC.IO.Encoding.UTF16
        GHC.IO.Encoding.UTF32
        GHC.IO.Encoding.Latin1
    other-modules:
        Foreign.ForeignPtr.Imp
    include-dirs: include
}
