name:           base-st
version:        4.6.0.1
license:        BSD3
license-file:   LICENSE
maintainer:     libraries@haskell.org
bug-reports: http://hackage.haskell.org/trac/ghc/newticket?component=libraries/base
synopsis:       Basic libraries
description:
    This package contains the Prelude and its support libraries,
    and a large collection of useful libraries ranging from data
    structures to parsing combinators and debugging utilities.
cabal-version:  >=1.6
build-type: Simple

source-repository head
    type:     git
    location: http://darcs.haskell.org/packages/base.git/

Library {
    build-depends: rts, ghc-prim, base-pure
    exposed-modules:
        GHC.ST,
        GHC.STRef
        Control.Monad.ST
        Control.Monad.ST.Imp
        Control.Monad.ST.Lazy
        Control.Monad.ST.Lazy.Imp
        Control.Monad.ST.Lazy.Safe
        Control.Monad.ST.Lazy.Unsafe
        Control.Monad.ST.Safe
        Control.Monad.ST.Strict
        Control.Monad.ST.Unsafe
        Data.STRef
        Data.STRef.Lazy
        Data.STRef.Strict
    include-dirs: include

}
